--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+      <title>
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
+      </title>
+    </head>
+    <body>
+      <header>
+        <h1></h1>
+        <nav>
+          <ul>
+            <li img src="https://placeholder.it/200*70/ddd" alt="Logo"></li>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section>
+          <img src="https://placeholder.it/960*450/ddd" alt="Logo">
+        </section>
+        <section>
+          <img src="https://placeholder.it/300*375/ddd" alt="image">
+          <img src="https://placeholder.it/300*370/ddd" alt="image">
+          <img src="https://placeholder.it/300*375/ddd" alt="image">
+        </section>
+        <section>
+          <img src="https://placeholder.it/480*400/ddd" alt="image">
+          <p>
+            <article>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo illo sunt, expedita, vitae nesciunt ipsam consequatur tempora placeat temporibus fugit quaerat alias eveniet id magni error exercitationem quod iusto cumque.
+            </article>            
+            <label>
+              <input type="submit" value="Call to Action">
+              indoor
+            </label>
+
+          </p>
+        </section>
+      </main>
+      <footer>
+
+      </footer>
+    </body>
+  </html>
 
